2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b70

	* Change: Correct the identification of the movie.thumb path
	  (get_GalleryPathes() is called in init.php)

2004-04-28  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b69

	* gallery_remote2.php: when an album is set to not allow the user
	  to view full-sized pictures, but there is no resized picture,
	  do allow to view full-sized, because it's the same as resized.
	  This appears to be what the web UI does.

2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b68

	* Change: More beatification in resize_photo.php

2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b67

	* Change: Forgot some $GALLERY_BASEDIR. Now its complete free.

2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b66

	* Change: BIG Change. Gallery is now ~90% valid HTML 4.01.
		  This includes HTML Code tidying.

	* Change: Complete Remove of global $GALLERY_BASEDIR

	* Change: Replace of <?php echo getStyleSheetLink() ?>
		  into <?php common_header(); ?>

	* New: Added possibility add parameter to gallery_validation_link()

	* Fix: Correct Title in move_photo.php

	* Change: Beautified some pages. E.g. Photo Properties

2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b65

	* Change: popup_js, redux. Only quote the string if it contains
	  (^http|^ftp).  JS functions don't like to be quoted.

2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b64

	* Change: Properly quote popup_js's return URL and escape quotes
	  which would otherwise break the string early.

2004-04-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b63

	* Change: Move htmlspecialchars() to prevent JS url break
	  ---- REVERTED

2004-04-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b62

	* Change: Rename "ROOT" option in move scripts to ".root" to 
	  prevent interaction with a user album, which could be named
	  "ROOT"
	  - All user-viewable (translatable) text is unchanged; "ROOT"