@@ -1,3 +1,8 @@
+2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b71
+
+	* Change: Renamed get_GalleryPathes() to getGalleryPaths() 
+	  to fix spelling and uniformity of naming
+
 2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b70
 
 	* Change: Correct the identification of the movie.thumb path
@@ -1069,7 +1074,7 @@
 	* Bugfix: Added missing echo for GeekLog Header.
 
 	* Bugfix: Configwizard now runs fine when embedded and Gallery has debian structure.
-	  - Introduced function get_GalleryPathes wich defines 3 constants:
+	  - Introduced function get_GalleryPathes which defines 3 constants:
 	  --- GALLERY_CONFDIR
 	  --- GALLERY_SETUPDIR
 	  --- GALLERY_BASE
